--- a/hobbies/scuba.html
+++ b/hobbies/scuba.html
@@ -47,9 +47,37 @@
                 Relaxing myself in the water and experiencing astonishing underwater creatures helps me appreciate nature and motivates me to do more to protect the environment. For this reason, I feel proud to become an engineering researcher because I have the chance to contribute in shaping a cleaner and more sustainable environment so that future generations can also experience this beautiful mother nature.
             </p>
 
-            <p>
-                Photos to be shared soon once available.
-            </p>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-4">
+                        <img src="../hobbies/image/scuba4.jpg" width=100%>
+                        <label>With other divers at Tioman Island</a></label>
+                    </div>
+                    <div class="col-md-4">
+                        <img src="../hobbies/image/scuba1.jpg" width=100%>
+                        <label>A photo with my instructor Gan</a></label>
+                    </div>
+                    <div class="col-md-4">
+                        <img src="../hobbies/image/scuba2.jpg" width=100%>
+                        <label>A shot during a wreck dive</a></label>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-4">
+                        <img src="../hobbies/image/scuba3.jpg" width=100%>
+                        <label>Beautiful corals at Perhentian Island</a></label>
+                    </div> 
+                    <div class="col-md-4">
+                        <img src="../hobbies/image/scuba5.jpg" width=100%>
+                        <label>Exploring underwater creatures</a></label>
+                    </div>
+                    <div class="col-md-4">
+                        <img src="../hobbies/image/scuba6.jpg" width=100%>
+                        <label>Sea urchins on the seabed</a></label>
+                    </div> 
+                </div>
+            </div>
+            <p class="enter"></p>
             
         </main>
         </div>
