--- a/hobbies/scuba.html
+++ b/hobbies/scuba.html
@@ -103,15 +103,15 @@
                 </div>
                 <div class="row">
                     <div class="col-md-4">
-                        <img src="../hobbies/image/scuba9.jpg" width=100%>
+                        <img src="../hobbies/image/scuba9.JPG" width=100%>
                         <label>A variety of carol reefs at Readang Island</a></label>
                     </div> 
                     <div class="col-md-4">
-                        <img src="../hobbies/image/scuba7.jpg" width=100%>
+                        <img src="../hobbies/image/scuba7.JPG" width=100%>
                         <label>Clownfish and sea anemones</a></label>
                     </div> 
                     <div class="col-md-4">
-                        <img src="../hobbies/image/scuba8.jpg" width=100%>
+                        <img src="../hobbies/image/scuba8.JPG" width=100%>
                         <label>A group of yellowback fusilier</a></label>
                     </div>
                 </div>
