--- a/hobbies/scuba.html
+++ b/hobbies/scuba.html
@@ -90,22 +90,23 @@
                 <div class="row">
                     <div class="col-md-4">
                         <img src="../hobbies/image/scuba3.jpg" width=100%>
-                        <label>Beautiful corals at Perhentian Island</a></label>
+                        <label>Coral reef at Shark Point, Perhentian</a></label>
                     </div> 
+                    <div class="col-md-4">
+                        <img src="../hobbies/image/scuba11.jpg" width=100%>
+                        <label>Coral reef at Pulau Paku, Redang</a></label>
+                    </div> 
+                    <div class="col-md-4">
+                        <img src="../hobbies/image/scuba9.jpg" width=100%>
+                        <label>Coral reef at Cheisa, Redang</a></label>
+                    </div> 
+                </div>
+                <div class="row">
+                    
                     <div class="col-md-4">
                         <img src="../hobbies/image/scuba5.jpg" width=100%>
                         <label>Exploring underwater creatures</a></label>
                     </div>
-                    <div class="col-md-4">
-                        <img src="../hobbies/image/scuba6.jpg" width=100%>
-                        <label>Sea urchins on a seabed</a></label>
-                    </div> 
-                </div>
-                <div class="row">
-                    <div class="col-md-4">
-                        <img src="../hobbies/image/scuba9.jpg" width=100%>
-                        <label>A variety of carol reefs at Readang Island</a></label>
-                    </div> 
                     <div class="col-md-4">
                         <img src="../hobbies/image/scuba7.jpg" width=100%>
                         <label>Clownfish and sea anemones</a></label>
@@ -113,6 +114,20 @@
                     <div class="col-md-4">
                         <img src="../hobbies/image/scuba8.jpg" width=100%>
                         <label>A group of yellowback fusilier</a></label>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-4">
+                        <img src="../hobbies/image/scuba6.jpg" width=100%>
+                        <label>Sea urchins on a seabed</a></label>
+                    </div> 
+                    <div class="col-md-4">
+                        <img src="../hobbies/image/scuba12.jpg" width=100%>
+                        <label>Fishes swim above coral reef</a></label>
+                    </div> 
+                    <div class="col-md-4">
+                        <img src="../hobbies/image/scuba13.jpg" width=100%>
+                        <label>Sea cucumber resting on a rock</a></label>
                     </div>
                 </div>
             </div>
