--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                             <div>
                             <b>Country of Residence:</b> 
                                 <ul class="nobull">
-                                    <li><i class="flag-icon flag-icon-ca"></i> Malaysia</li>
+                                    <li><i class="flag-icon flag-icon-ca"></i> Canada</li>
                                 </ul>    
                             </div>
                         
