--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                     <div>
                     <b>Country of Residence:</b> 
                         <ul class="nobull">
-                            <li><i class="flag flag-icon flag-icon-my"></i> Malaysia</li>
+                            <li><i class="flag flag-icon flag-icon-ca"></i> Canada</li>
                         </ul>    
                     </div>
                 
