--- a/education/MSc.html
+++ b/education/MSc.html
@@ -56,7 +56,7 @@
                 <div class="collapse" id="collapseExample_A">
                     <div class="card card-body accordion_cont">
                         <div>
-                            COMING SOON!
+                            <img src="../education/image/M.Sc. Degree.PNG" alt="M.Sc. Degree" width="70%">
                         </div>      
                     </div>
                 </div>
