--- a/professional/summary.html
+++ b/professional/summary.html
@@ -151,7 +151,7 @@
                 <td>Jun 2020</td>
                 <td><a href="../professional/GPS974.html">GPS 974: Graduate Professional Skills Certificate</a></td>
                 <td>University of Saskatchewan</td>
-                <td><a>Coming Soon</a></td>
+                <td><a href="../pdf/2019-12 Graduate Professional Skills Certificate.pdf" target="_blank">Access</a></td>
             </tr>
             <tr>
                 <td>Apr 2019</td>
