--- a/volunteer/volunteer.html
+++ b/volunteer/volunteer.html
@@ -135,7 +135,7 @@
                 <td>2018 - 2019</td>
                 <td>Vice President Student Affairs</td>
                 <td><a href="https://egcc.usask.ca/">Engineering Graduate Community Council</a>, U of S</td>
-                <td>Coming soon</td>
+                <td><a href="../pdf/2019-10 EGCC VP Student Affairs.pdf" target="_blank">Access</a></td>
             </tr>
             <tr>
                 <td>2018 - 2019</td>
