--- a/professional/GPS974.html
+++ b/professional/GPS974.html
@@ -59,7 +59,7 @@
             <div class="collapse" id="collapseExample_E">
                 <div class="card card-body accordion_cont">
                     <div>
-                        <img src="../professional/image/GPS 974.png" alt="GPS 974 Cert" width="70%"> 
+                        <img src="../professional/image/GPS 974.PNG" alt="GPS 974 Cert" width="70%"> 
                     </div>      
                 </div>
             </div>
