--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         <a href="https://www.linkedin.com/in/herman-heng-b5a08292/" data-toggle="tooltip" data-placement="top" title="Linkedin"><img src="icon/linkedin.png" class="social-media-home"></a>
                         <a href="https://www.instagram.com/cdcloud/" data-toggle="tooltip" data-placement="top" title="Instagram"><img src="icon/instagram.png" class="social-media-home"></a>
                         <a href="#" data-toggle="tooltip" data-placement="top" title="Google Scholar"><img src="icon/GS2.png" class="social-media-home"></a>
-                        <a href="https://join.skype.com/invite/q9DVUC38d92R" data-toggle="tooltip" data-placement="top" title="Skype"><img src="icon/skype.jpg" class="social-media-home"></a>
+                        <a href="https://join.skype.com/invite/rkkjw5ggin8z" data-toggle="tooltip" data-placement="top" title="Skype"><img src="icon/skype.jpg" class="social-media-home"></a>
                         <a href="https://www.couchsurfing.com/people/herman-heng-1" data-toggle="tooltip" data-placement="top" title="Couchsurfing"><img src="icon/CS.png" class="social-media-home"></a>       
                     </div>
                 </div>
@@ -67,7 +67,7 @@
                                     <a href="https://www.linkedin.com/in/herman-heng-b5a08292/" data-toggle="tooltip" data-placement="top" title="Linkedin"><img src="icon/linkedin.png" class="social-media-home"></a>
                                     <a href="https://www.instagram.com/cdcloud/" data-toggle="tooltip" data-placement="top" title="Instagram"><img src="icon/instagram.png" class="social-media-home"></a>
                                     <a href="#" data-toggle="tooltip" data-placement="top" title="Google Scholar"><img src="icon/GS2.png" class="social-media-home"></a>
-                                    <a href="https://join.skype.com/invite/q9DVUC38d92R" data-toggle="tooltip" data-placement="top" title="Skype"><img src="icon/skype.jpg" class="social-media-home"></a>
+                                    <a href="https://join.skype.com/invite/rkkjw5ggin8z" data-toggle="tooltip" data-placement="top" title="Skype"><img src="icon/skype.jpg" class="social-media-home"></a>
                                     <a href="https://www.couchsurfing.com/people/herman-heng-1" data-toggle="tooltip" data-placement="top" title="Couchsurfing"><img src="icon/CS.png" class="social-media-home"></a>
                                 </div>
                             </div>
