--- a/education/publication.html
+++ b/education/publication.html
@@ -44,7 +44,8 @@
             </h3>
             <p>
                 <ul>   
-                    <li>A. Beitel, H. Heng, and D. Sumner (2019). <a href="https://www.sciencedirect.com/science/article/pii/S0167610518306093">The effect of aspect ratio on the aerodynamic forces and bending moment for a surface-mounted finite-height cylinder</a>. Journal of Wind Engineering and Industrial Aerodynamics, 186, 204-213.</li>
+                    <li>Heng, H., and Sumner, D. (2020). <a href="http://koreascience.or.kr/article/JAKO202028959354112.page">Wind loading of a finite prism: aspect ratio, incidence and boundary layer thickness effects.</a> Wind and Structures 31, 255-267.</li>
+                    <li>Beitel, A., Heng H., and Sumner D (2019). <a href="https://www.sciencedirect.com/science/article/pii/S0167610518306093">The effect of aspect ratio on the aerodynamic forces and bending moment for a surface-mounted finite-height cylinder</a>. Journal of Wind Engineering and Industrial Aerodynamics, 186, 204-213.</li>
                 </ul>        
             </p>
             <h3>
