--- a/professional/summary.html
+++ b/professional/summary.html
@@ -148,6 +148,12 @@
                 <th>Access the Cert</th>
             </tr>
             <tr>
+                <td>Dec 2020</td>
+                <td><a href="../professional/GPS974.html">Google Certified Education Level 1</a></td>
+                <td>Google For Education</td>
+                <td><a href="../pdf/2020-12 Google Certified Educator Level 1" target="_blank">Access</a></td>
+            </tr>
+            <tr>
                 <td>Jun 2020</td>
                 <td><a href="../professional/GPS974.html">GPS 974: Graduate Professional Skills Certificate</a></td>
                 <td>University of Saskatchewan</td>
