--- a/teaching/philosophy.html
+++ b/teaching/philosophy.html
@@ -41,7 +41,7 @@
             <hr>
 
             <div class="paragraph">  
-                <a class="float-right text-right" href="../pdf/My Teaching Philosophy Statement - Revised.pdf" target="_blank">
+                <a class="float-right text-right" href="../pdf/My Teaching Philosophy Statement.pdf" target="_blank">
                     Open in new window <i class="fa">&#xf08e;</i>
                 </a>
                 <embed src="../pdf/My Teaching Philosophy Statement.pdf" width="100%" height="600">
