--- a/education/MSc.html
+++ b/education/MSc.html
@@ -99,7 +99,7 @@
                 My major work throughout my master's degree is research of experimental fluid mechanics, specifically on bluff-body aerodynamics. This research investigated the effect of wind directions, structural dimensions, and incoming wind turbulence intensity on the aerodynamics properties of square prisms. More information of my M.Sc. experimental research can be found <a href="../education/experimental.html">here</a>. 
             </p>
             <p>
-                This thesis was supervised by <a href="http://homepage.usask.ca/~drs694/sumner.htm">Prof. David Sumner</a>, and its associated work was greatly assisted by Shawn Reinink and Hayden Reitenbach.
+                This thesis was supervised by <a href="https://davidrobertsumner.wordpress.com/">Prof. David Sumner</a>, and its associated work was greatly assisted by Shawn Reinink and Hayden Reitenbach.
             </p>
 
             <h3>
