--- a/professional/summary.html
+++ b/professional/summary.html
@@ -160,6 +160,12 @@
                 <td><a href="../pdf/2019-12 Graduate Professional Skills Certificate.pdf" target="_blank">Access</a></td>
             </tr>
             <tr>
+                <td>Nov 2019</td>
+                <td>Skills of Communication & Networking Skills</td>
+                <td>Mitacs</td>
+                <td><a href="../pdf/2019-11 Mitacs.pdf" target="_blank">Access</a></td>
+            </tr>
+            <tr>
                 <td>Apr 2019</td>
                 <td><a href="../professional/GPS989.html">GPS 989: Philosophy and Practice of University Teaching</a></td>
                 <td>University of Saskatchewan</td>
