--- a/education/publication.html
+++ b/education/publication.html
@@ -46,7 +46,7 @@
                 <ul>   
                     <li>Heng, H., Meng, FR., McKechnie, J. (2021). <a href="https://doi.org/10.1016/j.wasman.2021.07.032">Wind turbine blade wastes and the environmental impacts in Canada</a>. Waste Management 133, 59-70.</li>
                     <li>Heng, H., Sumner, D. (2020). <a href="https://doi.org/10.12989/was.2020.31.3.255">Wind loading of a finite prism: aspect ratio, incidence and boundary layer thickness effects</a>. Wind and Structures 31, 255-267.</li>
-                    <li>Beitel, A., Heng, H., Sumner, D (2019). <a href="https://doi.org/10.1016/j.jweia.2019.01.009">The effect of aspect ratio on the aerodynamic forces and bending moment for a surface-mounted finite-height cylinder</a>. Journal of Wind Engineering and Industrial Aerodynamics, 186, 204-213.</li>
+                    <li>Beitel, A., Heng, H., Sumner, D. (2019). <a href="https://doi.org/10.1016/j.jweia.2019.01.009">The effect of aspect ratio on the aerodynamic forces and bending moment for a surface-mounted finite-height cylinder</a>. Journal of Wind Engineering and Industrial Aerodynamics, 186, 204-213.</li>
                 </ul>        
             </p>
             <h3>
