--- a/hobbies/scuba.html
+++ b/hobbies/scuba.html
@@ -40,6 +40,28 @@
             </h1>
             <hr>
 
+            <div class="container">
+                <div class="row">
+                <div class="col-md">
+                    <button style="text-align: center;" class="btn btn-block accordion_butt" type="button" data-toggle="collapse" 
+                    data-target="#collapseExample_C" aria-expanded="false" aria-controls="collapseExample">
+                        Click here to view my certification
+                    </button>
+                </div>
+                </div>
+                <div class="row">
+                <div class="col-md">
+                    <div class="collapse" id="collapseExample_C">
+                    <div class="card card-body accordion_cont">
+                        <div>
+                        <embed src="../hobbies/image/Scuba Diving AOW License.png" height="500">
+                        </div>      
+                    </div>
+                    </div>
+                </div>      
+                </div>
+            </div>
+
             <p>
                 I am a certified advanced scuba diver by the Professional Association of Diving Instructors (PADI), an international scuba diver training organization. I find that I particularly enjoy sports activities that require courage and self-confidence, and scuba diving is a good fit based on this personality of mine. It definitely motivates me to be more courageous. Not only that, but it also helps me motivate other first-time scuba divers in my team who need courage and confidence to try their first dive. 
             </p>
