--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
                         <a href="https://join.skype.com/invite/rkkjw5ggin8z" data-toggle="tooltip" data-placement="top" title="Skype"><img src="icon/skype.jpg" class="social-media-home"></a>
                         <a href="https://www.couchsurfing.com/people/herman-heng-1" data-toggle="tooltip" data-placement="top" title="Couchsurfing"><img src="icon/CS.png" class="social-media-home"></a>       
                     </div>
+                    <div>
+                        <img src="icon/GCE_Badges_02.png" width="100%">
+                    </div>
                 </div>
             </div>
 
@@ -70,6 +73,9 @@
                                     <a href="https://join.skype.com/invite/rkkjw5ggin8z" data-toggle="tooltip" data-placement="top" title="Skype"><img src="icon/skype.jpg" class="social-media-home"></a>
                                     <a href="https://www.couchsurfing.com/people/herman-heng-1" data-toggle="tooltip" data-placement="top" title="Couchsurfing"><img src="icon/CS.png" class="social-media-home"></a>
                                 </div>
+                                <div>
+                                    <img src="icon/GCE_Badges_02.png" width="50%">
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -86,7 +92,7 @@
                             <li><span class="icon"> &#128119; </span> Engineer</li>
                             <li><span class="icon"> &#128640; </span> Researcher </li>
                             <li><span class="icon"> &#128187; </span> Programmer</li> 
-                            <li><span class="icon"> &#128218; </span> Teacher </li>
+                            <li><span class="icon"> &#128218; </span> Educator </li>
                             <li><span class="icon"> &#128161; </span> Mentor</li>
                             <li><span class="icon"> &#127925; </span> Musician </li>
                         </ul>
@@ -152,7 +158,7 @@
                                     <li><span style="font-size: 20px;"> &#128119; </span> Engineer 
                                         <span style="font-size: 20px;"> &#128640; </span> Researcher
                                         <span style="font-size: 20px;"> &#128187; </span> Programmer</li> 
-                                    <li><span style="font-size: 20px;"> &#128218; </span> Teacher
+                                    <li><span style="font-size: 20px;"> &#128218; </span> Educator
                                         <span style="font-size: 20px;"> &#128161; </span> Mentor
                                         <span style="font-size: 20px;"> &#127925; </span> Musician</li>
                                 </ul>
