--- a/index.html
+++ b/index.html
@@ -217,19 +217,19 @@
                 <div class="row">
                     <div class="col-md-4">
                         <a href="education/MSc.html"> <button class="homebutton">
-                            <img src="icon/education.png" width="100" height="100">
+                            <img src="icon/education3.png" width="100" height="100">
                             <h4>Education & Research</h4>
                         </button></a>
                     </div>
                     <div class="col-md-4">
                         <a href="professional/summary.html"> <button class="homebutton">
-                            <img src="icon/professional.png" width="100" height="100">
+                            <img src="icon/professional2.png" width="100" height="100">
                             <h4>Professional Development</h4>
                         </button></a>
                     </div>
                     <div class="col-md-4">
                         <a href="teaching/philosophy.html"> <button class="homebutton">
-                            <img src="icon/teaching.png" width="100" height="100">
+                            <img src="icon/teaching2.png" width="100" height="100">
                             <h4>Teaching & Mentorship</h4>
                         </button></a>
                     </div>
@@ -238,19 +238,19 @@
                 <div class="row">
                     <div class="col-md-4">
                         <a href="volunteer/volunteer.html"> <button class="homebutton">
-                            <img src="icon/volunteer.png" width="100" height="100">
+                            <img src="icon/volunteer3.png" width="100" height="100">
                             <h4>Community Involvement</h4>
                         </button></a>
                     </div>
                     <div class="col-md-4">
                         <a href="travel/travel.html"> <button class="homebutton">
-                            <img src="icon/travel.png" width="100" height="100">
+                            <img src="icon/travel2.png" width="100" height="100">
                             <h4>Travels & Outreach</h4>
                         </button></a>
                     </div>
                     <div class="col-md-4">
                         <a href="hobbies/music.html"> <button class="homebutton">
-                            <img src="icon/sport.png" width="100" height="100">
+                            <img src="icon/sport2.png" width="100" height="100">
                             <h4>Hobbies & Interests</h4>
                         </button></a>
                     </div>
@@ -267,12 +267,12 @@
                 It is my aspiration to connect with more people across the world. I constantly welcome feedback from different people of various backgrounds. I embrace any idea exchange on how to make the world a better place to live. If you think we are sharing the same values, I would be more than happy to connect with you. Please feel free to contact me via any social media at your wish at the left pane (desktop view) or the top pane (mobile view) of this page. I look forward to connecting with you &#128512; 
             </p>  
             
-            <p id = "small_caption"><i>Icons on this page was made by 
+            <!-- <p id = "small_caption"><i>Icons on this page was made by 
                 <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a>, 
                 <a href="https://www.flaticon.com/authors/eucalyp" title="Eucalyp">Eucalyp</a>, and
                 <a href="https://www.flaticon.com/authors/payungkead" title="Payungkead">Payungkead</a>
                 from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></i>
-            </p>
+            </p> -->
             
         </main>
         </div>
