--- a/professional/layout.html
+++ b/professional/layout.html
@@ -37,6 +37,7 @@
                 <b>Content:</b>
                 <ul class="nobull">
                     <li><a class="whitelink" href="summary.html"> Summary of Skills </a></li>
+                    <li><a class="whitelink" href="GCE.html"> Google Certified Educator </a></li>
                     <li><a class="whitelink" href="CS50.html"> CS50 Computer Science </a></li>
                     <li><a class="whitelink" href="GPS974.html"> Graduate Professional Skills </a></li>
                     <li><a class="whitelink" href="GPS989.html"> University Teaching </a></li>        
@@ -60,6 +61,7 @@
                     <div class="aside-content">
                         <ul class="nobull">
                             <li><a class="whitelink" href="summary.html"> Summary of Skills </a></li>
+                            <li><a class="whitelink" href="GCE.html"> Google Certified Educator </a></li>
                             <li><a class="whitelink" href="CS50.html"> CS50 Computer Science </a></li>
                             <li><a class="whitelink" href="GPS974.html"> Graduate Professional Skills </a></li>
                             <li><a class="whitelink" href="GPS989.html"> University Teaching </a></li>        
