--- a/teaching/f3.html
+++ b/teaching/f3.html
@@ -40,6 +40,9 @@
                 Fluid Mechanics Lab
             </h1>
             <hr>
+            <h6>
+                Organization: University of Saskatchewan
+            </h6>
 
             <p>
                 I was serving as a lab demonstrator during my <a href="../education/MSc.html">M.Sc.</a> program. The labs that I taught were mainly in the area of fluid mechanics, including a wind energy lab, which was performed outdoor, and a flow measurement lab which was performed in a wind tunnel. The lab was designed to help students strengthen their understanding in the engineering subjects of thermodynamics and fluid mechanics. 
