--- a/teaching/layout.html
+++ b/teaching/layout.html
@@ -39,7 +39,8 @@
                 <ul class="nobull">
                     <li><a class="whitelink" href="../teaching/philosophy.html"> Teaching Statement</a></li>
                     <li><a class="whitelink" href="../teaching/f3.html"> Fluid Mechanics Lab</a></li>
-                    <li><a class="whitelink" href="../teaching/thermo.html"> Thermodynamics</a></li>
+                    <li><a class="whitelink" href="../teaching/thermo.html">Thermodynamics</a></li>
+                    <li><a class="whitelink" href="../teaching/imas.html">Mathematics</a></li>
                 </ul>
                 <a href="../index.html"><button class="btn home"><i class="fa fa-home"></i> Home</button></a> 
             </div>
@@ -62,6 +63,7 @@
                             <li><a class="whitelink" href="../teaching/philosophy.html"> Teaching Statement</a></li>
                             <li><a class="whitelink" href="../teaching/f3.html"> Fluid Mechanics Lab</a></li>
                             <li><a class="whitelink" href="../teaching/thermo.html"> Thermodynamics</a></li>
+                            <li><a class="whitelink" href="../teaching/imas.html">Mathematics</a></li>
                         </ul> 
                     </div>
                 </div>
