--- a/teaching/thermo.html
+++ b/teaching/thermo.html
@@ -40,6 +40,9 @@
                 Thermodynamics
             </h1>
             <hr>
+            <h6>
+                Organization: Universiti Tenaga Nasional (The Energy University) 
+            </h6>
 
             <p>
                 During my last year of <a href="../education/BSc.html">undergraduate studies</a>, I initiated a tutorial program that provided additional academic support for students outside their regular classroom schedule. This program was offered for thermodynamics, statics, engineering graphics, and principles of programming. The reason I initiated this program is that I believe having strong understanding on fundamental engineering subjects is the key to cultivate interest in engineering among junior students. This interest would then be a strong motivator to drive their academic success in their senior years later.
