--- a/teaching/imas.html
+++ b/teaching/imas.html
@@ -115,14 +115,18 @@
             </h6>
             <ul>
                 <li>His math examples are always creative such as using the US election example in teaching Fractions.</li>
+                <li>He teaches us different methods on solving questions based on our preferences.</li>
                 <li>The teacher explained in a fun way and and show us respect.</li>
                 <li>The teacher is open to comments and explains properly.</li>
                 <li>The teacher explained to the students even if he has to repeat 5 times.</li>
-                <li>He is really good at explaining the lesson thoroughly and making sure we understand.</li>
+                <li>He is really good at explaining the lessons thoroughly and making sure we understand.</li>
                 <li>He is very organized and makes sure that everyone in the class understands.</li>
                 <li>He understands us well and makes the lessons easier for learning.</li>
                 <li>The teacher does the lessons in such a way where many students enjoy having lessons.</li>
                 <li>He always helps us with our homework if we don’t understand.</li>
+                <li>He is very good at explaining topics and helping us revise for exams. He also encourages students to learn from their mistakes.</li>
+                <li>I like his way of teaching, organization, and his personality. Overall he's a great teacher.</li>
+
             </ul>
             <p class="enter"></p>
 
