--- a/professional/summary.html
+++ b/professional/summary.html
@@ -83,13 +83,13 @@
             </tr>
             <tr>
                 <td>Aug 2021</td>
-                <td><a href="https://edu.google.com/teacher-center/certifications/educator-level2/?modal_active=none">Google Certified Education Level 2</a></td>
+                <td><a href="../professional/GCE.html">Google Certified Education Level 2</a></td>
                 <td>Google For Education</td>
                 <td><a href="../pdf/2021-08 Google Certified Educator Level 2.pdf" target="_blank">Access</a></td>
             </tr>
             <tr>
                 <td>Dec 2020</td>
-                <td><a href="https://edu.google.com/teacher-center/certifications/educator-level1/?modal_active=none">Google Certified Education Level 1</a></td>
+                <td><a href="../professional/GCE.html">Google Certified Education Level 1</a></td>
                 <td>Google For Education</td>
                 <td><a href="../pdf/2020-12 Google Certified Educator Level 1.pdf" target="_blank">Access</a></td>
             </tr>
