--- a/teaching/imas.html
+++ b/teaching/imas.html
@@ -64,26 +64,26 @@
             <h6>
                 Girls' Class (Grade 7):
             </h6>
-            <div class="paragraph big-screen-image">
+            <div class="image">
                 <img src="../teaching/image/7A1 Group Photo.png" width="100%">
             </div>
             <h6>
                 Girls' Class (Grade 8):
             </h6>
-            <div class="paragraph big-screen-image">
+            <div class="image">
                 <img src="../teaching/image/8A1 Group Photo.png" width="100%">
             </div>
 
             <h6>
                 Boys' Class (Grade 7):
             </h6>
-            <div class="paragraph big-screen-image">
+            <div class="image">
                 <img src="../teaching/image/7A4 Group Photo.png" width="100%">
             </div>
             <h6>
                 Boys' Class (Grade 8):
             </h6>
-            <div class="paragraph big-screen-image">
+            <div class="image">
                 <img src="../teaching/image/8A3 Group Photo.png" width="100%">
             </div>
 
@@ -96,16 +96,16 @@
                 The figure below shows some lesson/instructor evaluations answered by my students from four different classes.  
             </p>
 
-            <div class="paragraph big-screen-image">
+            <div class="image">
                 <img src="../teaching/image/imas_evaluation1.png" width="100%">
             </div>
-            <div class="paragraph big-screen-image">
+            <div class="image">
                 <img src="../teaching/image/imas_evaluation2.png" width="100%">
             </div>
-            <div class="paragraph big-screen-image">
+            <div class="image">
                 <img src="../teaching/image/imas_evaluation3.png" width="100%">
             </div>
-            <div class="paragraph big-screen-image">
+            <div class="image">
                 <img src="../teaching/image/imas_evaluation4.png" width="100%">
             </div>
             <br>
@@ -126,7 +126,6 @@
                 <li>He always helps us with our homework if we don’t understand.</li>
                 <li>He is very good at explaining topics and helping us revise for exams. He also encourages students to learn from their mistakes.</li>
                 <li>I like his way of teaching, organization, and his personality. Overall he's a great teacher.</li>
-
             </ul>
             <p class="enter"></p>
 
